<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/scrollview_default">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bits_of_primefactors"
                style="@style/wrapping_textview" />

            <Space
                android:id="@+id/space1"
                style="@style/small_space" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:text="@string/bits"
                    style="@style/wrapping_textview" />

                <EditText
                    android:layout_width="116dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/txtBitsForNumbers"
                    android:singleLine="true"
                    android:inputType="number" />
            </LinearLayout>

            <Space
                android:id="@+id/space2"
                style="@style/small_space" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_generate_carmichael"
                    android:id="@+id/btnStartGeneration" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_cancel"
                    android:id="@+id/btnCancel"
                    android:visibility="invisible" />
            </LinearLayout>

            <Space
                android:id="@+id/space3"
                style="@style/big_space" />

            <ProgressBar
                style="@style/task_progressbar"
                android:id="@+id/progressBar" />

            <Space
                android:id="@+id/space4"
                style="@style/big_space" />

            <TextView
                android:id="@+id/lblResultNumber"
                android:textIsSelectable="true"
                android:visibility="invisible"
                style="@style/wrapping_textview" />

            <TextView
                android:id="@+id/lblFailNumbersCount"
                android:textIsSelectable="true"
                android:visibility="invisible"
                style="@style/wrapping_textview" />

            <TextView
                android:id="@+id/lblSuccessNumbersCount"
                android:textIsSelectable="true"
                android:visibility="invisible"
                style="@style/wrapping_textview" />

            <TextView
                android:id="@+id/lblFailChance"
                android:textIsSelectable="true"
                android:visibility="invisible"
                style="@style/wrapping_textview" />

            <TextView
                android:text="@string/taken_time"
                android:id="@+id/lblTimeMeasurement"
                android:visibility="invisible"
                style="@style/wrapping_textview" />

            <Space
                android:id="@+id/space5"
                style="@style/big_space" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_fermat_with_number"
                android:id="@+id/btnDoFermatTest"
                android:visibility="invisible" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_millerrabin_with_number"
                android:id="@+id/btnDoMillerRabinTest"
                android:visibility="invisible" />

            </LinearLayout>
    </ScrollView>

</LinearLayout>